# fondo

./: .buildconfig  .gitignore  .travis.yml  AUTHORS.md  Dockerfile  README.md  app  com.github.calo001.fondo.json  com.github.calo001.fondo.yml  meson.build
.github/: FUNDING.yml
.github/workflows/: main.yml
data/: com.github.calo001.fondo.appdata.xml  com.github.calo001.fondo.appdata.xml.in  com.github.calo001.fondo.background.desktop.in  com.github.calo001.fondo.desktop  com.github.calo001.fondo.desktop.in  com.github.calo001.fondo.gresource.xml  com.github.calo001.fondo.gschema.xml  meson.build
data/css/: .goutputstream-PTN1NZ  animations.css  style.css  style.css~
data/images/: Thumbs.db
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.calo001.fondo.pot  cs.po  de.mo  de.po  de_DE.po  es.po  fr.po  hr.po  it.po  meson.build  nds.po  nl.po  nl_NL.po  pt.po  pt_BR.po  pt_br.po  ro.po  ru.po  sr.po  tr.po  tr_TR.po
po/extra/: LINGUAS  POTFILES  cs.po  de.po  es.po  extra.pot  fr.po  hr.po  it.po  meson.build  nl.po  pt.po  pt_BR.po  sr.po  tr.po
src/: Application.vala  Main.vala  Window.vala  meson.build
src/Configs/: AccountServiceProvider.vala  Constants.vala  Settings.vala  Strings.vala
src/Controllers/: AppController.vala
src/Enums/: Navigation.vala  ScreenMode.vala  TypeCard.vala
src/Models/: Photo.vala
src/Popovers/: MenuPopover.vala  MultipleWallpaperPopover.vala  PhotoDetailPopover.vala  SharePopover.vala  WallpaperPopover.vala
src/Services/: Connection.vala
src/Utils/: ContractorManager.vala  Delegates.vala  DockManager.vala  FileManager.vala  JsonManager.vala  MultiWallpaper.vala  Networking.vala  ThemeManager.vala  Wallpaper.vala  XMLBackground.vala
src/Views/: AppViewError.vala  ButtonCategory.vala  CardPhotoView.vala  CreditsView.vala  DarkModeOption.vala  FilterOptionsView.vala  LoadingView.vala  MultipleWallpaperView.vala  PhotosView.vala  SettingsView.vala
src/Widgets/: BottonNavbar.vala  ButtonTab.vala  DownloadContainerWidget.vala  HeaderBar.vala  LabelTop.vala  LabelTotalResults.vala  MultipleCardFlowBoxChild.vala  MultiplePreviewWidget.vala
src/Windows/: PreviewWindow.vala  Window.vala
src/background/: Application.vala  Dummy.vala  Main.vala  Model.vala  meson.build
src/configs/: Constants.vala  Settings.vala  Strings.vala
src/controllers/: AppController.vala
src/enums/: Navigation.vala
src/interfaces/: ObservablePattern.vala  WindowEvents.vala
src/models/: Photo.vala  PhotoBuilder.vala  SearchResult.vala
src/popovers/: MenuPopover.vala  PhotoDetailPopover.vala  SearchPopover.vala  SharePopover.vala  WallpaperPopover.vala
src/services/: Connection.vala
src/structs/: Photo.vala
src/utils/: DownloadImage.vala  JsonManager.vala  Networking.vala  RandomImage.vala  SchemaManager.vala  Wallpaper.vala  WallpaperSettings.vala
src/views/: AppView.vala  AppView.vala~  AppViewError.vala  CardPhotoView.vala  CardPhotoView.vala~  CategoriesView.vala  EmptyHistoryView.vala  EmptyView.vala  FilterOptionsView.vala  FilteringView.vala  LoadingView.vala  PhotosView.vala  PreviewWindow.vala
src/views/structs/: Photo.vala
src/widgets/: BottonNavbar.vala  ButtonNavbar.vala  HeaderBar.vala  LabelTop.vala  ModeSwitch.vala  PopupWallpaper.vala
src/windows/: PreviewWindow.vala  Window.vala  windowError.vala
tests/: assert.vala  test.vala
