sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',
    'configs/Strings.vala',
    
    'controllers/AppController.vala',

    'views/PhotosView.vala',
    'views/AppViewError.vala',
    'views/CardPhotoView.vala',
    'views/ButtonCategory.vala',
    'views/CategoriesView.vala',
    'views/EmptyHistoryView.vala',
    'views/EmptyView.vala',
    'views/LoadingView.vala',
    'views/FilterOptionsView.vala',

    'popovers/MenuPopover.vala',
    'popovers/WallpaperPopover.vala',
    'popovers/SharePopover.vala',
    'popovers/PhotoDetailPopover.vala',

    'models/Photo.vala',
    'models/SearchResult.vala',

    'utils/Wallpaper.vala',
    'utils/Networking.vala',
    'utils/JsonManager.vala',
    'utils/SchemaManager.vala',

    'widgets/BottonNavbar.vala',
    'widgets/ButtonTab.vala',
    'widgets/HeaderBar.vala',
    'widgets/LabelTop.vala',
    'widgets/LabelTotalResults.vala',

    'services/Connection.vala',

    'enums/Navigation.vala',

    'Application.vala',
    'Main.vala',

    'windows/PreviewWindow.vala',
    'windows/Window.vala'
)
