sources = files(
    'Configs/Constants.vala',
    'Configs/Settings.vala',
    'Configs/Strings.vala',
    'Configs/AccountServiceProvider.vala',
    
    'Controllers/AppController.vala',

    'Views/PhotosView.vala',
    'Views/AppViewError.vala',
    'Views/CardPhotoView.vala',
    'Views/ButtonCategory.vala',
    'Views/CategoriesView.vala',
    'Views/EmptyHistoryView.vala',
    'Views/EmptyView.vala',
    'Views/LoadingView.vala',
    'Views/FilterOptionsView.vala',

    'Popovers/MenuPopover.vala',
    'Popovers/WallpaperPopover.vala',
    'Popovers/SharePopover.vala',
    'Popovers/PhotoDetailPopover.vala',

    'Models/Photo.vala',
    'Models/SearchResult.vala',

    'Utils/Wallpaper.vala',
    'Utils/Networking.vala',
    'Utils/JsonManager.vala',
    'Utils/SchemaManager.vala',

    'Widgets/BottonNavbar.vala',
    'Widgets/ButtonTab.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/LabelTop.vala',
    'Widgets/LabelTotalResults.vala',

    'Services/Connection.vala',

    'Enums/Navigation.vala',

    'Application.vala',
    'Main.vala',

    'Windows/PreviewWindow.vala',
    'Windows/Window.vala'
)
