sources = files(
    'Configs/Constants.vala',
    'Configs/Settings.vala',
    'Configs/Strings.vala',
    
    'Controllers/AppController.vala',

    'Views/PhotosView.vala',
    'Views/AppViewError.vala',
    'Views/CardPhotoView.vala',
    'Views/ButtonCategory.vala',
    'Views/CategoriesView.vala',
    'Views/EmptyHistoryView.vala',
    'Views/EmptyView.vala',
    'Views/LoadingView.vala',
    'Views/FilterOptionsView.vala',
    'Views/MultipleWallpaperView.vala',
    'Views/DarkModeOption.vala',

    'Popovers/MenuPopover.vala',
    'Popovers/WallpaperPopover.vala',
    'Popovers/SharePopover.vala',
    'Popovers/PhotoDetailPopover.vala',
    'Popovers/MultipleWallpaperPopover.vala',

    'Models/Photo.vala',
    'Models/SearchResult.vala',

    'Utils/Wallpaper.vala',
    'Utils/Networking.vala',
    'Utils/JsonManager.vala',
    'Utils/FileManager.vala',
    'Utils/SchemaManager.vala',
    'Utils/MultiWallpaper.vala',
    'Utils/XMLBackground.vala',
    'Utils/Delegates.vala',
    'Utils/DockManager.vala',
    'Utils/ContractorManager.vala',
    'Utils/ThemeManager.vala',

    'Widgets/BottonNavbar.vala',
    'Widgets/ButtonTab.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/LabelTop.vala',
    'Widgets/LabelTotalResults.vala',
    'Widgets/MultiplePreviewWidget.vala',
    'Widgets/MultipleCardFlowBoxChild.vala',
    'Widgets/DownloadContainerWidget.vala',

    'Services/Connection.vala',

    'Enums/Navigation.vala',
    'Enums/TypeCard.vala',
    'Enums/ScreenMode.vala',

    'Application.vala',
    'Main.vala',

    'Windows/PreviewWindow.vala',
    'Windows/Window.vala'
)
